タイトル・説明文更新

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="shrink-to-fit=no, width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <meta name="description" content="地形の強調度を変更できるバーチャルアースです" />
+  <meta name="description" content="地形の強調度を変更できる立体地図です" />
   <meta property="og:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
-  <meta property="og:description" content="地形の強調度を変更できるバーチャルアースです" />
+  <meta property="og:description" content="地形の強調度を変更できる立体地図です" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@hwtnv" />
   <meta name="twitter:creator" content="@hwtnv" />
   <meta name="twitter:title" content="地形強調立体地図" />
-  <meta name="twitter:description" content="地形の強調度を変更できるバーチャルアースです" />
+  <meta name="twitter:description" content="地形の強調度を変更できる立体地図です" />
   <meta name="twitter:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
-  <title>Cesium地形強調サンプル｜An interactive terrain exaggeration example</title>
+  <title>地形強調立体地図｜An interactive terrain exaggeration map</title>
   <script src="Cesium/Cesium.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="https://www.google.com/jsapi"></script>
