--- a/index.html
+++ b/index.html
@@ -182,14 +182,18 @@
         requestRenderMode: true,
         maximumRenderTimeChange: Infinity
       });
+
       //デフォルトベースマップを黒に
       viewer.scene.globe.baseColor = Cesium.Color.fromCssColorString('#000000');
       ellipsoidProvider = new Cesium.EllipsoidTerrainProvider();
       cesiumTerrainProviderMeshes = new Cesium.createWorldTerrain({
-        requestWaterMask: true,
-        requestVertexNormals: true
+        requestWaterMask: false,
+        requestVertexNormals: false
       });
       viewer.terrainProvider = cesiumTerrainProviderMeshes;
+      //ライティングをOFFに
+      viewer.scene.globe.enableLighting = false;
+      viewer.scene.fog.enabled = false;
 
       //初期視点に移動
 
@@ -272,33 +276,34 @@ map of the world.\nhttp://www.openstreetmap.org',
 
     //ジオコード
 
-		function geocode() {
-			var geocoder = new google.maps.Geocoder();
-			var input = document.getElementById('inputtext').value;
-			geocoder.geocode(
-				{ address: input },
+    function geocode() {
+      var geocoder = new google.maps.Geocoder();
+      var input = document.getElementById('inputtext').value;
+      geocoder.geocode({
+          address: input
+        },
 
-				function (results, status) {
-					if (status == google.maps.GeocoderStatus.OK) {
-						var viewportObj = results[0].geometry.viewport;
-						var southNorth = viewportObj[Object.keys(viewportObj)[0]];
-						var westEast = viewportObj[Object.keys(viewportObj)[1]];
+        function (results, status) {
+          if (status == google.maps.GeocoderStatus.OK) {
+            var viewportObj = results[0].geometry.viewport;
+            var southNorth = viewportObj[Object.keys(viewportObj)[0]];
+            var westEast = viewportObj[Object.keys(viewportObj)[1]];
 
-						var south = southNorth[Object.keys(southNorth)[0]];
-						var north = southNorth[Object.keys(southNorth)[1]];
-						var west = westEast[Object.keys(westEast)[0]];
-						var east = westEast[Object.keys(westEast)[1]];
-						var rectangle = Cesium.Rectangle.fromDegrees(west, south, east, north);
-						viewer.camera.flyTo({
-							destination: rectangle,
-							easingFunction: Cesium.EasingFunction.CUBIC_IN_OUT
-						});
-					} else {
-						alert('Not Found');
-					}
-				}
-			);
-		}
+            var south = southNorth[Object.keys(southNorth)[0]];
+            var north = southNorth[Object.keys(southNorth)[1]];
+            var west = westEast[Object.keys(westEast)[0]];
+            var east = westEast[Object.keys(westEast)[1]];
+            var rectangle = Cesium.Rectangle.fromDegrees(west, south, east, north);
+            viewer.camera.flyTo({
+              destination: rectangle,
+              easingFunction: Cesium.EasingFunction.CUBIC_IN_OUT
+            });
+          } else {
+            alert('Not Found');
+          }
+        }
+      );
+    }
 
     //視点変更
 
