--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <script src="Cesium/Cesium.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="https://www.google.com/jsapi"></script>
+
+  <!-- Google Maps APIキーは適宜新しいものに替えてください -->
   <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyANog99I4-p4DPA7I-irblbeaHL1MdgVYo">
   </script>
   <style>
